# multi_modal_ai_studio

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  NOTICE  README.md  THIRD-PARTY-NOTICES.md  bench_mm_cache.py  bench_mm_cache_results.json  pyproject.toml  requirements.txt
.agents/skills/: skills.yaml
.agents/skills/device-management/: SKILL.md
.agents/skills/llm-backend-setup/: SKILL.md
.agents/skills/preset-configuration/: SKILL.md
.agents/skills/riva-speech/: SKILL.md
.agents/skills/visual-question-answering/: SKILL.md
.agents/skills/voice-vision-session/: SKILL.md
.cursor/: index.mdc
.cursor/rules/: architecture.mdc  backends.mdc  code-style.mdc  documentation.mdc  project.mdc  ui-patterns.mdc
.github/workflows/: build-wheel.yml
benchmarks/: video_encoding_benchmark.py  vlm_video_benchmark.py
docs/: ASR_LEADING_SEGMENT.md  ASR_PHANTOM_PARTIAL_WHY_LIVE_RIVA_DIFFERS.md  AUDIO_MODES.md  FUTURE_UI_ENHANCEMENTS.md  INVESTIGATE_USER_AMPLITUDE_ARTIFACT.md  SESSION_LIFECYCLE.md  SESSION_MANAGEMENT.md  TIMELINE_DESIGN.md  VLM_SETUP.md  architecture.md  asr_model_for_multi_utterance.md  audio_pipeline.md  pcm_pipeline_trace.md  plan-ui-improvement-collapsible-config.md  saw_user_amplitude_analysis.md  setup_riva.md  third_party_dependencies.md  todo_barge_in_server_speaker.md  vlm_guide.md
docs/development/: architecture.md  audio_pcm_pipeline_traced.md  release-checklist.md  releasing.md  testing-quickstart.md  testing.md  todo_asr_stream_stale_after_mute.md  todo_barge_in_server_speaker.md  todo_config_defaults_refactor.md
examples/: demo_timeline_rectangles.py
mock_sessions/: high_accuracy_test__20260203.json  long_conversation__20260203.json  low_latency_test__20260203.json  mixed_performance__20260203.json
presets/: cosmos-reason.yaml  default.yaml  high-accuracy.yaml  llm-router.yaml  low-latency.yaml  openai-realtime.yaml  tensorrt-edge-cosmos.yaml  text-only.yaml  voice-only.yaml
scripts/: add_spdx_headers.py  capture_short_webcam_video.py  check_ollama_llm_latency.sh  convert_live_riva_timeline.py  create_session_from_screenshot.py  fix_debug_doc.py  generate_mock_sessions.py  generate_third_party_licenses.sh  install_grpcurl.sh  pcm_to_wav.py  pre_commit_check.sh  run_webui.sh  setup_dev.sh  test_backends.py  test_cosmos_vision_curl.sh  test_integration.py  test_mic_capture.py  test_ollama_vision_curl.sh  test_quick.sh  test_realtime_client.py  test_realtime_with_wav.py  test_session.py  verify_setup.py  webcam_ring_buffer_mp4.py
sessions/: example_session.json  example_session_2.json
src/multi_modal_ai_studio/: __init__.py  __main__.py
src/multi_modal_ai_studio/backends/: __init__.py  base.py
src/multi_modal_ai_studio/backends/asr/: __init__.py  riva.py
src/multi_modal_ai_studio/backends/llm/: __init__.py  openai.py
src/multi_modal_ai_studio/backends/realtime/: __init__.py  client.py
src/multi_modal_ai_studio/backends/tts/: __init__.py  riva.py
src/multi_modal_ai_studio/backends/vision/: __init__.py  frame_broker.py  frame_capture.py  local_video_feeder.py
src/multi_modal_ai_studio/cli/: __init__.py  main.py
src/multi_modal_ai_studio/config/: __init__.py  schema.py
src/multi_modal_ai_studio/core/: __init__.py  session.py  timeline.py
src/multi_modal_ai_studio/devices/: __init__.py  capture.py  local.py  playback.py
src/multi_modal_ai_studio/server/: __init__.py
src/multi_modal_ai_studio/utils/: __init__.py
src/multi_modal_ai_studio/webui/: camera_webrtc.py  server.py  system_stats.py  voice_pipeline.py
src/multi_modal_ai_studio/webui/static/: app.js  index.html  nvidia-theme.css  styles.css  styles.css.backup
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_config_schema.py  test_version.py
