[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name (hyphens); Python package is multi_modal_ai_studio (underscores)
name = "multi-modal-ai-studio"
version = "0.1.0"
description = "Multi-modal AI interface with voice, text, and video support for analyzing conversational AI systems"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Chitoku YATO (tokk-nv)", email = "cyato@nvidia.com"},
    {name = "Aditya Sahu (adsahu-nv)", email = "adsahu@nvidia.com"},
    {name = "kbenkhaled", email = "kbenkhaled@nvidia.com"},
]
keywords = ["ai", "voice", "multimodal", "riva", "nvidia", "openai", "conversational-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "aiohttp>=3.8.0",
    "psutil>=5.9.0",
    "grpcio>=1.50.0",
    "nvidia-riva-client>=2.14.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.21.0",
    "websockets>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
audio = [
    "pyaudio>=0.2.13",  # For local USB device access (headless mode)
]
camera = [
    "opencv-python-headless>=4.5.0",  # For /api/camera/stream (Jetson USB webcam preview)
]
webrtc-camera = [
    "aiortc>=1.6.0",
    "av>=10.0.0",
    "opencv-python-headless>=4.5.0",
]

[project.scripts]
multi-modal-ai-studio = "multi_modal_ai_studio.cli.main:main"

[project.urls]
Homepage = "https://github.com/NVIDIA-AI-IOT/multi_modal_ai_studio"
Documentation = "https://github.com/NVIDIA-AI-IOT/multi_modal_ai_studio/tree/main/docs"
Repository = "https://github.com/NVIDIA-AI-IOT/multi_modal_ai_studio"
Issues = "https://github.com/NVIDIA-AI-IOT/multi_modal_ai_studio/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
multi_modal_ai_studio = ["webui/static/**/*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
